add 80's terminal theme style, removed wrappers in html and render them in TS instead

--- a/src/index.html
+++ b/src/index.html
@@ -8,34 +8,46 @@
 		<title>Battleship</title>
 	</head>
 	<body>
-		<header>
-			<div class="header-container">
-				<h1>Battleship</h1>
-			</div>
-		</header>
+		<div class="container-all">
+			<header>
+				<div class="header-container">
+					<h1>Battleship</h1>
+				</div>
+			</header>
+			<main class="main">
+				<div class="greetings-container">
+					<p class="greetings">
+						The Star Kingdom of Manticore is under attack by the treacherous People's
+						Republic of Haven! Her Majesty Queen Elizabeth III commands you to defend the
+						Kingdom!
+					</p>
+					<p class="greetings">
+						Haven has amassed a fleet near the Talbott Cluster, seeking to invade the
+						Rembrandt Trade Union, a consortium of governments, merchant lines and
+						businessmen from four star systems, with headquarters on Rembrandt. The brave
+						people of Rembrandt have requested our help with the promise of joining the
+						Kingdom once the Haven threat has been neutralized.
+					</p>
+					<p class="greetings">
+						You have been called upon to engage and defeat the Haven Fleet and secure
+						peace and prosperity for the Star Kingdom!
+					</p>
+				</div>
 
-		<main class="main">
-			<div class="form-container">
-				<form action="#" name="form-name-input" id="form-name">
-					<label for="input-name"></label>
-					<input
-						type="text"
-						id="input-name"
-						name="form-name-input"
-						placeholder="enter name"
-					/>
-					<button type="submit" name="form-name-input">Enter</button>
-				</form>
-			</div>
-
-			<div class="infoScreen-wrapper"></div>
-
-			<div class="shipBttns-wrapper"></div>
-
-			<div class="playerBoard-wrapper"></div>
-
-			<div class="compBoard-wrapper"></div>
-		</main>
+				<div class="form-container">
+					<form action="#" name="form-name-input" id="form-name">
+						<label for="input-name"></label>
+						<input
+							type="text"
+							id="input-name"
+							name="form-name-input"
+							placeholder="enter name"
+						/>
+						<button type="submit" name="form-name-input" class="bttn-name">Enter</button>
+					</form>
+				</div>
+			</main>
+		</div>
 
 		<!--  -->
 		<!--  -->
