added github repo links

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
 			<header>
 				<div class="header-container">
 					<h1>Battleship</h1>
+					<div class="links">
+						<a href="https://github.com/Athma-Vasi">Made by Athma Vasi</a>
+						<a href="https://github.com/Athma-Vasi/Battleship">View Code</a>
+					</div>
 				</div>
 			</header>
 			<main class="main">
