responsive styles, more info & battle texts, improved battle messages

--- a/src/index.html
+++ b/src/index.html
@@ -9,47 +9,66 @@
 	</head>
 	<body>
 		<div class="container-all">
-			<header>
-				<div class="header-container">
-					<h1>Battleship</h1>
-					<div class="links">
-						<a href="https://github.com/Athma-Vasi">Made by Athma Vasi</a>
-						<a href="https://github.com/Athma-Vasi/Battleship">View Code</a>
-					</div>
+			<header class="header">
+				<h1>Battleship</h1>
+				<div class="header__links">
+					<a href="https://github.com/Athma-Vasi">Made by Athma Vasi</a>
+					<a href="https://github.com/Athma-Vasi/Battleship">View Code</a>
 				</div>
 			</header>
 			<main class="main">
 				<div class="greetings-container">
 					<p class="greetings">
-						The Star Kingdom of Manticore is under attack by the treacherous People's
-						Republic of Haven! Her Majesty Queen Elizabeth III commands you to defend the
-						Kingdom!
+						In a time of crisis, the Star Kingdom of Manticore faces a grave threat from
+						the treacherous People's Republic of Haven. Their aggression and lust for
+						power has forced us into a war we did not seek. However, as loyal subjects of
+						Her Majesty Queen Elizabeth III, it is our duty to defend our homeland and
+						protect our people from harm!
 					</p>
+
 					<p class="greetings">
-						Haven has amassed a fleet near the Talbott Cluster, seeking to invade the
-						Rembrandt Trade Union, a consortium of governments, merchant lines and
-						businessmen from four star systems, with headquarters on Rembrandt. The brave
-						people of Rembrandt have requested our help with the promise of joining the
-						Kingdom once the Haven threat has been neutralized.
+						The enemy seeks to destroy our way of life, but we will not falter! Our brave
+						sailors and soldiers stand ready to defend the Kingdom with honor and courage.
+						We will not rest until the threat of Haven is neutralized, and our people can
+						live in peace and prosperity once again.
+					</p>
+
+					<p class="greetings">
+						We call upon all loyal citizens of the Star Kingdom to rally behind our cause
+						and join us in this fight for our survival! Together, we will show the world
+						that the people of Manticore will never back down in the face of tyranny and
+						oppression!
+					</p>
+
+					<p class="greetings">
+						People's Republic of Haven has assembled a formidable fleet, commanded by the
+						traitor Admiral Esther McQueen, near the Talbott Cluster and are poised to
+						launch an invasion of the Rembrandt Trade Union. The brave people of Rembrandt
+						have reached out to us for assistance in the face of this imminent threat,
+						pledging their loyalty to the Kingdom upon the successful repulsion of the
+						Haven forces. As staunch defenders of peace and justice, we cannot turn a
+						blind eye to their plight and will stand by our allies in their hour of need.
+						Our fleet has been mobilized and will soon join the battle to ensure the
+						safety and sovereignty of the Rembrandt Trade Union.
 					</p>
 					<p class="greetings">
 						You have been called upon to engage and defeat the Haven Fleet and secure
-						peace and prosperity for the Star Kingdom!
+						peace and prosperity for the Star Kingdom and its allies!
 					</p>
 				</div>
 
-				<div class="form-container">
-					<form action="#" name="form-name-input" id="form-name">
+				<form action="#" name="form-name-input" id="form-name">
+					<div class="form__input">
 						<label for="input-name"></label>
 						<input
 							type="text"
 							id="input-name"
 							name="form-name-input"
-							placeholder="enter name"
+							placeholder="Enter your name, Admiral"
 						/>
-						<button type="submit" name="form-name-input" class="bttn-name">Enter</button>
-					</form>
-				</div>
+					</div>
+					<button type="submit" name="form-name-input" class="bttn-name">Enter</button>
+				</form>
 			</main>
 		</div>
 
