--- a/index.html
+++ b/index.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./index.776268f5.css" />
-		<title>Battleship</title>
-	</head>
-	<body>
-		<div class="container-all">
-			<header>
-				<div class="header-container">
-					<h1>Battleship</h1>
-					<div class="links">
-						<a href="https://github.com/Athma-Vasi">Made by Athma Vasi</a>
-						<a href="https://github.com/Athma-Vasi/Battleship">View Code</a>
-					</div>
-				</div>
-			</header>
-			<main class="main">
-				<div class="greetings-container">
-					<p class="greetings">
-						The Star Kingdom of Manticore is under attack by the treacherous People's
-						Republic of Haven! Her Majesty Queen Elizabeth III commands you to defend the
-						Kingdom!
-					</p>
-					<p class="greetings">
-						Haven has amassed a fleet near the Talbott Cluster, seeking to invade the
-						Rembrandt Trade Union, a consortium of governments, merchant lines and
-						businessmen from four star systems, with headquarters on Rembrandt. The brave
-						people of Rembrandt have requested our help with the promise of joining the
-						Kingdom once the Haven threat has been neutralized.
-					</p>
-					<p class="greetings">
-						You have been called upon to engage and defeat the Haven Fleet and secure
-						peace and prosperity for the Star Kingdom!
-					</p>
-				</div>
-				<div class="form-container">
-					<form action="#" name="form-name-input" id="form-name">
-						<label for="input-name"></label>
-						<input
-							type="text"
-							id="input-name"
-							name="form-name-input"
-							placeholder="enter name"
-						/>
-						<button type="submit" name="form-name-input" class="bttn-name">Enter</button>
-					</form>
-				</div>
-			</main>
-		</div>
-		<script type="module" src="./index.8c93f308.js" defer></script>
-		<script src="./index.aa5be9f1.js" defer nomodule=""></script>
-	</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/index.b2f8dfc4.css"><title>Battleship</title></head><body> <div class="container-all"> <header class="header"> <h1>Battleship</h1> <div class="header__links"> <a href="https://github.com/Athma-Vasi">Made by Athma Vasi</a> <a href="https://github.com/Athma-Vasi/Battleship">View Code</a> </div> </header> <main class="main"> <div class="greetings-container"></div> <form action="#" name="form-name-input" id="form-name"> <div class="form__input"> <label for="input-name"></label> <input type="text" id="input-name" name="form-name-input" placeholder="Enter your name, Admiral"> </div> <button type="submit" name="form-name-input" class="bttn-name">Enter</button> </form> </main> </div>   <script type="module" src="/index.651043cc.js" defer></script><script src="/index.2a5fee93.js" defer nomodule=""></script> </body></html>
